Fix table header miss align and responsiveness (#2114)
* Use position sticky to fix header alignment

* Fix table responsiveness

--- a/src/modules/banking/components/BankTransactionOpenEntryTable.module.css
+++ b/src/modules/banking/components/BankTransactionOpenEntryTable.module.css
@@ -21,6 +21,7 @@
 .matchTransactionTable {
   border-radius: var(--flx-border-radius-card);
   border: var(--flx-border-table-row-outline);
+  overflow-y: auto;
 }
 
 /* @FEELIX */
@@ -32,7 +33,16 @@
 /* @FEELIX */
 .matchTransactionTable :global(.table-data__body) {
   max-height: 28rem;
-  overflow-y: scroll;
+  min-width: 102rem;
+}
+
+/* @FEELIX */
+.matchTransactionTable :global(.table-data__header) {
+  position: sticky;
+  top: 0px;
+  z-index: 9;
+  background: var(--flx-palette-white);
+  min-width: 102rem;
 }
 
 /* @FEELIX */
