--- a/src/modules/banking/components/MatchTransactionTable.module.css
+++ b/src/modules/banking/components/MatchTransactionTable.module.css
@@ -10,6 +10,7 @@
 
 .descriptionContainer {
   display: flex;
+  min-width: 11.8rem;
 }
 
 /* @FEELIX */
